== 0.7.6 (2010-03-21)
  * Renamed 
  * Moved documentation from the Github Wiki to the actual class files and established a much nicer
    documentation combining examples and implementation (using Hanna) at: http://savon.rubiii.com
  * Added Savon::Client#call as a workaround for dispatching calls to SOAP actions  named after
	  existing methods. Fix for issue #48.
  * Add support for specifying attributes for duplicate tags (via Hash values as Arrays). Fix for issue #45.
  * Fix for issue #41 (Escape special characters (e.g. &) for XML requests).
  * Fix for issue #39 and #49. Added Savon::SOAP#xml which let's you specify completely custom SOAP request XML.

== 0.7.5 (2010-02-19)
  * Fix for issue #34 (soap_actions returns empty for wsdl12).
  * Fix for issue #36 (Custom WSDL actions broken).
  * Added feature requested in issue #35 (Setting an attribute on an element?).
  * Changed the key for specifying the order of tags from :@inorder to :order!

== 0.7.4 (2010-02-02)
  * Fix for issue #33 (undefined method 'start_with?').

== 0.7.3 (2010-01-31)
  * Added support for Geotrust-style WSDL documents (Julian Kornberger <github.corny@digineo.de>).
  * Make HTTP requests include path and query only. This was breaking requests via proxy as scheme and host
    were repeated (Adrian Mugnolo <adrian@mugnolo.com>)
  * Avoid warning on 1.8.7 and 1.9.1 (Adrian Mugnolo <adrian@mugnolo.com>).
  * Fix for issue #29 (WSSE Created Bug?). Default to UTC to xs:dateTime value for WSSE authentication.
  * Fix for issue #28 (Undefined Method ssl? on URI::Generic).
  * Fix for issue #27 (http content-type defaults to utf-8). The Content-Type now defaults to UTF-8.
  * Modification to allow assignment of an Array with an input name and an optional Hash of values to soap.input.
    Patches issue #30 (stanleydrew <andrewmbenton@gmail.com>).
  * Fix for issue #25 (header-tag should not be sent if not set).

== 0.7.2 (2010-01-17)