@@ -1,5 +1,14 @@
+== UPCOMING
+  * SOAP requests now start with a proper XML declaration.
+  * Added support for gzipped requests and responses (http://github.com/lucascs). While gzipped SOAP
+    responses are decoded automatically, you have to manually instruct Savon to gzip SOAP requests:
+
+      client = Savon::Client.new "http://example.com/UserService?wsdl", :gzip => true
+
+  * Fix for issue #51: added the :soap_endpoint option to Savon::Client.new which let's you specify a SOAP
+    endpoint per client instance.
+
 == 0.7.6 (2010-03-21)
-  * Renamed 
   * Moved documentation from the Github Wiki to the actual class files and established a much nicer
     documentation combining examples and implementation (using Hanna) at: http://savon.rubiii.com
   * Added Savon::Client#call as a workaround for dispatching calls to SOAP actions  named after
@@ -153,4 +162,3 @@
 
 == 0.5.0 (2009-11-29)
   * Complete rewrite.
-
